--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: rsvp 
+name: rsvpapp 
 description: A Helm chart demo RSVP App 
 
 # A chart can be either an 'application' or a 'library' chart.
